--- a/src/css/visualizationView.sass
+++ b/src/css/visualizationView.sass
@@ -5,3 +5,5 @@
     margin-top: 5px
     .visualization-view-title
       font-size: 2.5em
+  iframe
+    position: absolute
